--- a/attachments/NSI/TravailPourLe24012021/index.css
+++ b/attachments/NSI/TravailPourLe24012021/index.css
@@ -13,3 +13,17 @@ strong{
 .presp{
 	margin-left: 40px;
 }
+
+.questions{
+    margin-left: 40px;
+
+}
+.code{
+    margin-left: 80px; 
+}
+h2{
+    margin-left: 20px;
+}
+h3{
+    margin-left: 40px;
+}
